[package]
name        = "debatellm"
version     = "0.1.0"
edition     = "2021"
description = "Steel-manning language model — argue against you better than you can argue against yourself"
license     = "Apache-2.0"
repository  = "https://github.com/krishpranav/debatellm"
readme      = "README.md"
keywords    = ["llm", "nlp", "debate", "steel-manning", "candle"]
categories  = ["command-line-utilities", "science"]

# ---------------------------------------------------------------------------
# Feature flags
# ---------------------------------------------------------------------------
# cargo build --release --features cuda      ← production GPU path
# cargo build --release --features metal     ← Apple Silicon path
# cargo build --release                      ← CPU-only (development / CI)
# cargo build --release --features "cuda flash-attn"  ← max throughput on A100
[features]
default    = []
cuda       = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal      = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
flash-attn = ["candle-transformers/flash-attn"]

# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------
[dependencies]
candle-core         = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn           = { git = "https://github.com/huggingface/candle", package = "candle-nn" }
candle-transformers = { git = "https://github.com/huggingface/candle", package = "candle-transformers" }
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = { version = "0.19", features = ["http"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow    = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
rand = { version = "0.8", features = ["small_rng"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = "symbols"